--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
                 <li>
                     <div class="col-lg-2">
                         <div class="circleBase circleBase1"></div>
-                        <a href="#home">Inicio</a>
+                        <a href="#about">Siqueiros</a>
                     </div>
                 </li>
                 <li>    
