Commit #3, Listo para el Deploy
-Multilenguaje AK7 (español e inglés)
-Home, About, Designer y Contact listos

--- a/app/index.html
+++ b/app/index.html
@@ -31,46 +31,12 @@
         <!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-          <div class="menubar row center">
-            <ul>
-                <li>
-                    <div class="col-lg-2">
-                        <div class="circleBase circleBase1"></div>
-                        <a href="#about">Siqueiros</a>
-                    </div>
-                </li>
-                <li>    
-                    <div class="col-lg-2">
-                        <div class="circleBase circleBase2"></div>
-                        <a href="#collection">Colección</a>
-                    </div>
-                </li>
-                <li>    
-                    <div class="col-lg-2">
-                        <div class="circleBase circleBase3"></div>
-                        <a href="#shop">Compras</a>
-                    </div>
-                </li>
-                <li>    
-                    <div class="col-lg-2">
-                        <div class="circleBase circleBase4"></div>
-                        <a href="#designer">Diseñadora</a>
-                    </div>
-                </li>
-                <li>    
-                    <div class="col-lg-2">
-                        <div class="circleBase circleBase5"></div>
-                        <a href="#styling">Estilismo</a>
-                    </div>
-                </li>
-                <li>    
-                    <div class="col-lg-2">
-                        <div class="circleBase circleBase6"></div>
-                        <a href="#contact">Contacto</a>
-                    </div>
-                </li>
-            </ul>
-          </div><!-- /.nav-collapse -->
+          <div class="menubar row center"></div>
+          <div class="languagebar">
+            <a href="#en">EN</a><br>
+            <a href="#es">ES</a><br>
+            <a href="#fr">FR</a>
+          </div>
           <div class="content"></div>
           <footer class="footer">
             <h4>Creado por <a href="http://technergycr.com" target="_blank">Technergy</a> - Copyright 2015</h4>
