--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,8 @@
         <meta name="title" content="Siqueiros - El Complemento Perfecto para  la Mujer Contemporánea.">
         <meta name="description" content="Siqueiros - El Complemento Perfecto para  la Mujer Contemporánea.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <!-- build:css(.tmp) assets/main.css -->
+        
+        <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
         <link href="assets/css/bootstrap.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
